tests/test_assets/semantic/invalid/types/shadowed_enum_is_distinct.cog
State::enum {
    Ready,
}

test_shadowed_enum::() -> void {
    outer: State = State.Ready;

    State::enum {
        Ready,
    }

    inner: State = State.Ready;

    outer = inner;
}
